# controller/coba.go
@@ -223,6 +223,17 @@ func GetPresensiID(c *fiber.Ctx) error {
 // 	return c.JSON(ps)
 // }
 
+// InsertData godoc
+// @Summary Insert data presensi.
+// @Description Input data presensi.
+// @Tags Presensi
+// @Accept json
+// @Produce json
+// @Param request body Presensi true "Payload Body [RAW]"
+// @Success 200 {object} Presensi
+// @Failure 400
+// @Failure 500
+// @Router /ins [post]
 func InsertData(c *fiber.Ctx) error {
 	db := config.Ulbimongoconn
 	var presensi tuhmodel.Presensi
